@@ -3,7 +3,7 @@
  *
  * @category        page
  * @package         External Calendar
- * @version         1.1.3
+ * @version         1.1.4
  * @authors         Martin Hecht
  * @copyright       (c) 2015 - 2016, Martin Hecht (mrbaseman)
  * @link            http://forum.websitebaker.org/index.php/topic,28493.0.html
@@ -35,29 +35,29 @@ if(defined('WB_URL'))
     $mod_extcal = "CREATE TABLE IF NOT EXISTS `".TABLE_PREFIX."mod_extcal` ("
         . " `section_id` INT NOT NULL DEFAULT '0',"
         . " `page_id` INT NOT NULL DEFAULT '0',"
-        . " `cal_urls` TEXT NOT NULL DEFAULT '',"
+        . " `cal_urls` TEXT NOT NULL,"
         . " `max_entries` INT DEFAULT '0',"
         . " `max_days` INT DEFAULT '0',"
-        . " `time_zone` TEXT NOT NULL DEFAULT '',"
-        . " `dateformat` TEXT NOT NULL DEFAULT '',"        
-        . " `date_end` TEXT NOT NULL DEFAULT '',"         
-        . " `section_start` TEXT NOT NULL DEFAULT '',"
-        . " `section_end` TEXT NOT NULL DEFAULT '',"
+        . " `time_zone` TEXT NOT NULL,"
+        . " `dateformat` TEXT NOT NULL,"        
+        . " `date_end` TEXT NOT NULL,"         
+        . " `section_start` TEXT NOT NULL,"
+        . " `section_end` TEXT NOT NULL,"
         . " `enable_cache` INT DEFAULT '1',"
         . " `refresh_time` INT DEFAULT '0'," 
         . " `cache_time` INT DEFAULT '0'," 
-        . " `description_end` TEXT NOT NULL DEFAULT '',"
-        . " `entry_template` TEXT NOT NULL DEFAULT '',"
-        . " `description_start` TEXT NOT NULL DEFAULT '',"
-        . " `location_start` TEXT NOT NULL DEFAULT '',"
-        . " `location_end` TEXT NOT NULL DEFAULT '',"
-        . " `title_start` TEXT NOT NULL DEFAULT '',"
-        . " `title_end` TEXT NOT NULL DEFAULT '',"
-        . " `date_start` TEXT NOT NULL DEFAULT '',"
-        . " `confidential_text` TEXT NOT NULL DEFAULT '',"        
-        . " `timeformat` TEXT NOT NULL DEFAULT '',"     
-        . " `date_separator` TEXT NOT NULL DEFAULT '',"    
-        . " `date_template` TEXT NOT NULL DEFAULT '',"    
+        . " `description_end` TEXT NOT NULL,"
+        . " `entry_template` TEXT NOT NULL,"
+        . " `description_start` TEXT NOT NULL,"
+        . " `location_start` TEXT NOT NULL,"
+        . " `location_end` TEXT NOT NULL,"
+        . " `title_start` TEXT NOT NULL,"
+        . " `title_end` TEXT NOT NULL,"
+        . " `date_start` TEXT NOT NULL,"
+        . " `confidential_text` TEXT NOT NULL,"        
+        . " `timeformat` TEXT NOT NULL,"     
+        . " `date_separator` TEXT NOT NULL,"    
+        . " `date_template` TEXT NOT NULL,"    
         . " `optimize_date` INT DEFAULT '1',"
         . " `midnight_fix` INT DEFAULT '1',"
         . " `verify_peer` INT DEFAULT '1',"
