@@ -1,6 +1,7 @@
 
 /*
  *        CHANGELOG
+ *        1.1.4        2016-04-20        - prepare for sql strict and add section_id to user func calls
  *        1.1.3        2016-03-22        - fix html special char notation for acute accents
  *        1.1.2        2016-02-25        - another fix for completely empty calendars
  *        1.1.1        2016-02-25        - realign code: wrap long lines and set tab width=4
